test/fails/bad_types/bad_inc.lgl
void main() {
    vec2 x = [1., 2.];
    x++;
}